# Shippou

./: .gitignore
Project2/: .gitignore  README.md  docker-compose.yml  pyproject.toml
Project2/backend/: pom.xml
Project2/configs/: sample_strategy.yml
Project2/docs/: architecture.md  开发指南.md  接口文档.md  数据库设计文档.md  环境配置说明.md  系统回归测试与验收用例.md
Project2/frontend/: package-lock.json  package.json  vite.config.ts
Project2/frontend/src/: App.vue  main.ts  style.css
Project2/frontend/src/api/: auth.ts  http.ts  task.ts  taskLog.ts  team.ts  user.ts
Project2/frontend/src/components/: AppNotice.vue  TaskForm.vue  TaskList.vue
Project2/frontend/src/composables/: useAuthHeader.ts  useTaskHubListEdit.ts  useTaskHubPage.ts  useTaskOperationLogs.ts  useTeamSpace.ts  useTeamTaskModals.ts  useUserSearch.ts
Project2/frontend/src/constants/: auth.ts
Project2/frontend/src/router/: index.ts
Project2/frontend/src/stores/: auth.ts  notice.ts
Project2/frontend/src/types/: auth.ts  task.ts  taskLog.ts  team.ts  (+1 more)
Project2/outputs/: momentum_quality_demo_equity.csv  momentum_quality_demo_factor_ic.csv  momentum_quality_demo_report.html  momentum_quality_demo_trades.csv
Project2/quantlab/: __init__.py  cli.py  experiment.py
Project2/quantlab/api/: main.py
Project2/quantlab/backtest/: __init__.py  engine.py  metrics.py
Project2/quantlab/data/: __init__.py  pipeline.py  synthetic.py
Project2/quantlab/reporting/: __init__.py  report.py
Project2/quantlab/research/: __init__.py  factors.py  model.py
Project2/tests/: test_api.py  test_backtest.py  test_factors.py
(+194 files in other folders)
